--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "truffle": "^5.3.8"
+    "@openzeppelin/contracts": "^4.1.0",
+    "@truffle/hdwallet-provider": "^1.4.0",
+    "chai": "^4.3.4",
+    "chai-ethers": "^0.0.1",
+    "solidity-coverage": "^0.7.16",
+    "truffle": "^5.3.8",
+    "truffle-assertions": "^0.9.2"
   }
 }
